--- a/src/assets/element-plus.scss
+++ b/src/assets/element-plus.scss
@@ -1,7 +1,4 @@
-@forward 'element-plus/theme-chalk/src/common/var.scss' with (
-  $colors: (
-    'primary': (
-      'base': #0D9EA3,
+@forward 'element-plus/theme-chalk/src/common/var.scss' with ($colors: ('primary': ('base': #48C7C7,
     ),
   ),
 );
